# Documents-Translate-Pipeline

./: .env.example  .gitignore  Home.docx  Home.th.docx  README.md  pyproject.toml  ~$ome.th.docx
config/: default.yaml
samples/: sample.docx  sample.pptx  sample.xlsx
scripts/: fetch_fonts.py
src/doctranslate/: chunker.py  cli.py  config.py  docx_utils.py  exceptions.py  exporter.py  glossary.py  logging_utils.py  models.py  pipeline.py  prompts.py  retry.py  validator.py
src/doctranslate/llm/: anthropic_client.py  base.py  factory.py  ollama_client.py  openai_client.py  thaillm_client.py
src/doctranslate/replacer/: base.py  docx_replacer.py  pdf_replacer.py  pptx_replacer.py  xlsx_replacer.py
src/doctranslate/segmenter/: base.py  docx_segmenter.py  pdf_segmenter.py  pptx_segmenter.py  xlsx_segmenter.py
tests/: conftest.py  test_chunker.py  test_docx_roundtrip.py  test_docx_toc_fields.py  test_glossary_integration.py  test_llm_providers_mocked.py  test_pdf_roundtrip.py  test_pipeline_aliasing.py  test_pipeline_gap_fill.py  test_pptx_roundtrip.py  test_segmenter_docx.py  test_validator.py  test_xlsx_roundtrip.py
