[project]
name = "doctranslate"
version = "0.1.0"
description = "Document translation pipeline (DOCX/PPTX/XLSX/PDF) across Thai, Japanese, and English via pluggable LLM backends"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "ollama>=0.3",
    "openai>=1.40",
    "anthropic>=0.34",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
translate = "doctranslate.cli:app"
translate-doctor = "doctranslate.cli:doctor_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doctranslate"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
markers = [
    "integration: requires a live provider (Ollama/OpenAI/Anthropic/thaillm) or real credentials",
]
